[gd_scene load_steps=2 format=3 uid="uid://b82xle3sjekfg"]

[ext_resource type="Script" path="res://scripts/map-geno/user-interface/inspector/inspector_input_string_option.gd" id="1_d77te"]

[node name="InspectorInputBase" type="Panel"]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_d77te")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Layout"]
layout_mode = 2

[node name="Input" type="LineEdit" parent="Layout"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBox" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="OptionValue" type="LineEdit" parent="Layout/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Select option"

[node name="Options" type="OptionButton" parent="Layout/VBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
tooltip_text = "Presets"
fit_to_longest_item = false

[connection signal="text_changed" from="Layout/VBox/OptionValue" to="." method="_on_option_value_text_changed"]
[connection signal="item_selected" from="Layout/VBox/Options" to="." method="_on_options_item_selected"]
